@@ -4,6 +4,7 @@
             Bangle.js: Don't reset all peripherals when loading a new app, and only
               turn peripherals off if unused 500ms after starting new app
             Increase max arguments for Function.apply from 64 to 256
+            Add E.decodeUTF8 to allow UTF8 to be decoded into standard 8 bit characters
 
      2v09 : Bangle.js: increase default advertising interval from 375 to 200ms to ease connections
             Fix Math.acos for negative values (fix #1950)
